[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toho_async"
version = "0.1.0"
description = "TTM214 device control library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "windows-curses>=2.4.1",
]

[project.optional-dependencies]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["ttm214_async"]
